--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,3 @@
-# This workflow will build a golang project for Windows
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
 name: Go Workflow for Windows P2P Chat
@@ -26,3 +25,12 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Create Release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        RELEASE_NAME: ${{ github.event.pull_request.number }}
+        RELEASE_TAG: ${{ github.event.pull_request.number }}
+        DRAFT: false
+        PRERELEASE: false
